--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "@heroicons/react": "^1.0.1",
     "@reduxjs/toolkit": "1.5.0",
     "@tailwindcss/line-clamp": "^0.2.0",
-    "firebase": "^8.6.1",
+    "firebase": "^8.6.3",
     "firebase-admin": "^9.8.0",
-    "next": "latest",
+    "next": "^10.2.3",
     "next-auth": "^3.23.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
