--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.15.0",
     "@tailwindcss/line-clamp": "^0.2.0",
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "firebase": "^8.6.3",
     "firebase-admin": "^9.8.0",
     "next": "^10.2.3",
